<resources>
    <string name="app_name">MyStoryApp</string>
    <string name="stringUsername">Username</string>
    <string name="stringPassword">Password</string>
    <string name="stringLogin">Login</string>
    <string name="stringNewAccount">Create a new account ></string>
    <string name="stringNewEntry">NEW ENTRY</string>
    <string name="stringViewEntries">VIEW ENTRIES</string>
    <string name="stringViewCalendar">VIEW CALENDAR</string>
    <string name="stringSettings">SETTINGS</string>
    <string name="stringLogout">LOGOUT</string>
    <string name="stringThinkingAbout">What are you thinking about?</string>
    <string name="stringSeeAllEntries">See all entries</string>
    <string name="stringProfile">PROFILE</string>
    <string name="stringViewStats">VIEW STATS</string>
    <string name="stringSave">Save</string>
    <string name="stringAddLocation">ADD LOCATION</string>
    <string name="stringAddImage">ADD IMAGE</string>
    <string name="errorNoEntry">You can\'t save an empty entry.</string>
    <string name="errorNoDate">You must select a date to save this entry.</string>
    <string name="successSave">Your entry has been saved.</string>
    <string name="errorEntryNotFound">No entry was found on this date.</string>
    <string name="stringEdit">Edit</string>
    <string name="warningDateExists">There is already an entry for this date. Would you like to replace it?</string>
    <string name="stringWhatDo">What would you like to do?</string>
    <string name="stringSearchEntry">Search for an entry</string>
    <string name="stringYourProfile">Your Profile</string>
    <string name="errorFillIn">Please fill in your credentials.</string>
    <string name="errorPasswordNotMatching">Your password does not match.</string>
    <string name="errorEmailPasswordValidation">You must enter a valid email and your password must be at least 6 characters long.</string>
    <string name="errorWrongCredentials">The email or password was wrong. Please try again.</string>
    <string name="successRegister">Account successfully created.</string>
    <string name="alertEntryAlreadyExists">There\'s already an entry on this date. There can only be one entry per date, but you can modify the existing one.</string>
    <string name="successEntryDelete">This entry has been successfully deleted.</string>
    <string name="stringForgotPassword">Forgot password?</string>
    <string name="stringStyle">STYLE</string>
    <string name="stringUpdate">UPDATE</string>
    <string name="stringCreateAccount">REGISTER ACCOUNT</string>
    <string name="stringEmail">Email</string>
    <string name="stringConfirmPassword">Confirm Password</string>
    <string name="stringRegister">Register</string>
    <string name="themeMode">APP THEME\nLight</string>
    <string name="appLanguage">LANGUAGE\nEnglish</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="confirmLocation">Do you want to use this place?</string>
    <string name="successUsernameUpdate">Username successfully updated.</string>
    <string name="successPasswordUpdate">Password successfully updated.</string>
    <string name="successEmailUpdate">Email successfully updated.</string>
    <string name="facebook_app_id">170968538471606</string>
    <string name="fb_login_protocol_scheme">fb170968538471606</string>
</resources>