<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context=".SettingsScreen">

    <TableLayout
        android:id="@+id/layoutSettings2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@xml/border"
        android:stretchColumns="0"
        app:layout_constraintEnd_toEndOf="@+id/layoutSettings1"
        app:layout_constraintStart_toStartOf="@+id/layoutSettings1"
        app:layout_constraintTop_toBottomOf="@+id/layoutSettings1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@xml/border_bottom"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/textViewSettingsTheme"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:paddingLeft="15dp"
                android:text="@string/themeMode"
                android:textColor="@color/mainText"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="21dp"
                tools:layout_editor_absoluteY="554dp" />

            <Button
                android:id="@+id/buttonUpdateTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="clickUpdateTheme"
                android:text="@string/stringUpdate"
                app:backgroundTint="#3F51B5"
                tools:layout_editor_absoluteX="211dp"
                tools:layout_editor_absoluteY="417dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@xml/border_bottom"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/textViewSettingsLanguage"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:paddingLeft="15dp"
                android:text="@string/appLanguage"
                android:textColor="@color/mainText"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="21dp"
                tools:layout_editor_absoluteY="554dp" />

            <Button
                android:id="@+id/buttonUpdateLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stringUpdate"
                android:textColor="@color/material_on_primary_disabled"
                app:backgroundTint="@color/material_on_background_disabled"
                tools:layout_editor_absoluteX="211dp"
                tools:layout_editor_absoluteY="417dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@xml/border_bottom"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/textViewProfilePrivacy"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:paddingLeft="15dp"
                android:text="PRIVACY"
                android:textColor="@color/mainText"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="21dp"
                tools:layout_editor_absoluteY="554dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="VIEW"
                android:textColor="@color/material_on_primary_disabled"
                app:backgroundTint="@color/material_on_background_disabled" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/textViewProfileFAQ"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:paddingLeft="15dp"
                android:text="FAQ"
                android:textColor="@color/mainText"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="21dp"
                tools:layout_editor_absoluteY="554dp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="VIEW"
                android:textColor="@color/material_on_primary_disabled"
                app:backgroundTint="@color/material_on_background_disabled" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/layoutSettings1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:background="@xml/rounded_box_purple"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewSettingsMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/stringSettings"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageSettings"
            android:layout_width="351dp"
            android:layout_height="93dp"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_settings" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>